# pang

./: .gitignore  .gitmodules  Makefile  README.md  conftest.py  mypy.ini  pyproject.toml  pytest.ini  setup.py
.github/workflow-templates/: composition-ci.properties.json  composition-ci.yml
.github/workflows/: build.yml
docs/source/: conf.py  index.rst
dotfiles/: .gitignore
lilypond/: single-voice-staff.ily
pang/: __init__.py  aligner.py  build.py  cloud.py  commands.py  find.py  get.py  graceskip.py  indicators.py  metricmodulation.py  noteserver.py  paths.py  postprocessors.py  queuesimulation.py  scoping.py  segmentmaker.py  sequencemapper.py  sequences.py  sieves.py  soundpointsgenerators.py  spanners.py  templates.py  test_spanners.py
pang/scripts/: import_abjad_ily.py  make_repository.py  make_sections.py  test_score.py
pang/templates/: repositorycreator.py
pang/templates/repository/: .gitignore  Makefile  README.md  conftest.py  conftest.py.template  mypy.ini  pyproject.toml  pytest.ini
pang/templates/repository/.github/workflows/: build.yml
pang/templates/repository/tests/: test_soundpointsgenerator.py.template
pang/templates/repository/{{project_name}}/: library.py.template  soundpointsgenerators.py.template
pang/templates/repository/{{project_name}}/builds/score/: back-cover.tex  front-cover.tex  music.ly  preface.tex  score.tex
pang/templates/repository/{{project_name}}/segments/a/: music.py.template
pang/templates/repository/{{project_name}}/stylesheets/: stylesheet.ily
scripts/: make_score.py  make_sections.py  test_score.py  test_sections.py
tests/: test_AtaxicCloud___init__.py  test_AtaxicCloud_simulate_queue.py  test_GRWSoundPointsGenerator___call__.py  test_ManualOttavaHandler___call__.py  test_ManualSequence___init__.py  test_ManualSequence_extend.py  test_ProcessQuantizedSequenceCommand__segment_target_by_tag.py  test_RandomWalkSoundPointsGenerator___call__.py  test_Sequence.py  test_Sequence___init__.py  test_Sequence_durations.py  test_Sequence_extend.py  test_Sequence_simulate_queue.py  test_Sequence_superpose.py  test_SoundPointGenerators.py  test_VerboseOttavaHandler___call__.py  test_aligner.py  test_build.py  test_cloud___init__.py  test_cloud__simulate_queue.py  test_find.py  test_get.py  test_metricmodulation.py  test_noteserver.py  test_pad_voices_with_grace_skips.py  test_repositorycreator.py  test_sequence__simulate_queue.py  test_sequencemapper.py  test_sieves.py  test_simulate_queue.py  test_spanners.py  utils.py
