[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[project]
name = "pang"
version = "24.8b1"
authors = [
  { name="Tsz Kiu Pang" },
]
description = "Tsz Kiu Pang's Abjad library"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "abjad @ git+https://github.com/Abjad/abjad.git@7bca4dc7ab9b55441c3196e6e6d5b9e9184cc36f",
    "abjad-ext-nauert @ git+https://github.com/Abjad/abjad-ext-nauert.git@8dec05b66f537fba9ec153742658c05694c3aaec",
    "numpy",
    "tomlkit",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[project.optional-dependencies]
test = [
    "black",
    "flake8",
    "isort",
    "pytest",
    "mypy>=1.4.1, <1.5.0",
]

[project.scripts]
make_sections = "pang.scripts.make_sections:main"
make_score = "pang.scripts.make_score:main"
import_abjad_ily = "pang.scripts.import_abjad_ily:main"
