[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[project]
name = "pang"
version = "25.03b4"
authors = [
  { name="Tsz Kiu Pang" },
]
description = "Tsz Kiu Pang's Abjad library"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "abjad @ git+https://github.com/Abjad/abjad.git@8f66aa297c15a6f87d329c962b0d960fa6c6310c",
    "abjad-ext-nauert @ git+https://github.com/Abjad/abjad-ext-nauert.git@f636f81f10db16583bd75c6397bd93881a80ce2f",
    "numpy",
    "tomlkit",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[project.optional-dependencies]
test = [
    "black",
    "flake8",
    "isort",
    "pytest",
    "mypy>=1.4.1, <1.5.0",
]

[project.scripts]
make_repository = "pang.scripts.make_repository:main"
make_sections = "pang.scripts.make_sections:main"
make_score = "pang.scripts.make_score:main"
import_abjad_ily = "pang.scripts.import_abjad_ily:main"
