[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[project]
name = "pang"
version = "25.04b1"
authors = [
  { name="Tsz Kiu Pang" },
]
description = "Tsz Kiu Pang's Abjad library"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "abjad @ git+https://github.com/Abjad/abjad.git@91ec9f0bc12605e9c9f8597b2604be8448bdfb0b",
    "abjad-ext-nauert @ git+https://github.com/Abjad/abjad-ext-nauert.git@95b850e07834f1edcb1e5055028b53b0982da762",
    "numpy",
    "tomlkit",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[project.optional-dependencies]
test = [
    "black",
    "flake8",
    "isort",
    "pytest",
    "mypy>=1.15.0",
]

[project.scripts]
make_repository = "pang.scripts.make_repository:main"
make_sections = "pang.scripts.make_sections:main"
make_score = "pang.scripts.make_score:main"
import_abjad_ily = "pang.scripts.import_abjad_ily:main"
